--- a/src/main/resources/templates/views/user/newCompany.html
+++ b/src/main/resources/templates/views/user/newCompany.html
@@ -33,7 +33,7 @@
     			<div class="text-center mb-2">
 					<span class="navbar-brand">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-alert-circle"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M12 8v4" /><path d="M12 16h.01" /></svg>
-						You might be a person responsible for managing these services and users on behalf of your company.</span>
+						You might be a person responsible for managing iFrame2.0 on behalf of your company.</span>
 				</div>
 
 			    <form class="card card-md" id="companyInfoForm" name="companyInfoForm" method="post" action="/auth/adamsNewCs" autocomplete="off" onsubmit="return false;">
@@ -42,7 +42,7 @@
 						<h2 class="card-title text-center mb-4">Sign up for a new contract</h2>
 						<p class="text-secondary text-center mb-6">Once you fill out the form below and submit it, we will contact you shortly after checking the information.</p>
        
-						<div class="hr-text" style="font-size: 1em;">Company Information</div>
+						<div class="hr-text text-success fs-4">Company Information</div>
 
 						<div class="row">
 							<div class="col-md-4">
@@ -372,7 +372,7 @@
 							</div>
 						</div>
 
-						<div class="hr-text" style="font-size: 1em;">Administrator Information</div>
+						<div class="hr-text text-warning fs-4">Administrator Information</div>
 
 						<div class="row">
 							<div class="col-md-4">
