--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -59,6 +59,7 @@
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world.js?1692870487" defer></script>
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world-merc.js?1692870487" defer></script>
         <script src="js/utils.js" defer></script>
+        <script src="js/common.js"></script>
 
 		<!-- tabler library for making a select box -->
 		<script src="js/slickgrid/lib/select2.js?1692870487" defer></script>
